<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:padding="10dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <EditText
                android:id="@+id/conversionValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/converter_hint"
                android:inputType="numberDecimal"
                android:padding="15dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/sourceCurrencyCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty"
                android:textColor="@color/textColorWhite"
                android:textSize="@dimen/currency_code_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/divider1"
                app:layout_constraintEnd_toStartOf="@+id/divider1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/divider1" />

            <View
                android:id="@+id/divider1"
                android:layout_width="1dp"
                android:layout_height="30dp"
                android:background="@color/themeWhite"
                app:layout_constraintBottom_toBottomOf="@+id/lastSyncedOnValue"
                app:layout_constraintEnd_toStartOf="@+id/lastSyncedOnValue"
                app:layout_constraintStart_toEndOf="@+id/sourceCurrencyCode"
                app:layout_constraintTop_toTopOf="@+id/lastSyncedOn" />

            <TextView
                android:id="@+id/lastSyncedOn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/last_synced_on"
                android:textColor="@color/textColorWhite"
                app:layout_constraintBottom_toBottomOf="@+id/divider1"
                app:layout_constraintEnd_toStartOf="@+id/divider2"
                app:layout_constraintStart_toEndOf="@+id/divider1"
                app:layout_constraintTop_toBottomOf="@+id/conversionValue" />

            <TextView
                android:id="@+id/lastSyncedOnValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/empty"
                android:textColor="@color/textColorWhite"
                app:layout_constraintEnd_toStartOf="@+id/lastSyncedOn"
                app:layout_constraintStart_toEndOf="@+id/lastSyncedOn"
                app:layout_constraintTop_toBottomOf="@+id/lastSyncedOn" />

            <View
                android:id="@+id/divider2"
                android:layout_width="1dp"
                android:layout_height="30dp"
                android:background="@color/themeWhite"
                app:layout_constraintBottom_toBottomOf="@+id/lastSyncedOnValue"
                app:layout_constraintEnd_toStartOf="@+id/actionButton"
                app:layout_constraintStart_toEndOf="@+id/lastSyncedOn"
                app:layout_constraintTop_toTopOf="@+id/lastSyncedOn" />

            <Button
                android:id="@+id/actionButton"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:background="@color/themeWhite"
                android:gravity="center"
                android:text="@string/change"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/divider2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/divider2"
                app:layout_constraintTop_toTopOf="@+id/divider2" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/themeWhite"
            app:iconifiedByDefault="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container"
            app:queryHint="Search Results" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefresh"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchView">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/results"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <LinearLayout
            android:id="@+id/emptyInfo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchView"
            android:layout_margin="10dp"
            android:visibility="gone">

            <include layout="@layout/empty_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>