<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    app:cardCornerRadius="4dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/currencyCode"
            android:textColor="@color/textColorBlack"
            android:text="@string/empty"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/currency_code_size"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/currencyName"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/currencyCode"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/currencyValue"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textSize="@dimen/currency_value_size"
            app:layout_constraintTop_toBottomOf="@id/currencyName"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>