<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/searchBottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/themeWhite"
    android:orientation="vertical"
    android:padding="16dp"
    app:behavior_hideable="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/sourceCurrencySearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/themeWhite"
        app:iconifiedByDefault="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container"
        app:queryHint="Search Currency" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchList"
        android:layout_width="match_parent"
        android:layout_height="700dp" />

    <LinearLayout
        android:id="@+id/emptyInfo"
        android:layout_width="match_parent"
        android:layout_height="700dp"
        android:visibility="gone">

        <include layout="@layout/empty_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</LinearLayout>